--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,7 @@ html{
     left: 50%;
     transform: translateX(-50%);
     text-align: center;
+    text-shadow: 0 0 1px #000;
 }
 #slider .text-content .text-heading{
     font-size: 24px;
